--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
             <div class="team-info">
                 <ul>
                     <li><strong>1 Backend Developer:</strong> Node.js, APIs, database design</li>
-                    <li><strong>2 Mobile Developers:</strong> React Native development</li>
-                    <li><strong>1 Frontend Developer:</strong> React.js web application</li>
+                    <li><strong>2 Mobile Developers:</strong> Flutter development</li>
+                    <li><strong>1 Frontend Developer:</strong>Flutter or React.js web application</li>
                     <li><strong>Total Team Size:</strong> 4 developers working simultaneously</li>
                 </ul>
             </div>
